examples/test/testpolicy13946.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13946
  namespace: namespace371
spec:
  podSelector:
    matchLabels:
      key17: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value16
      podSelector:
        matchLabels:
          key2: value11
          key49: value26
          key33: value0
